# Footprints

./: .env.example  .gitignore  CRITICAL_REVIEW.md  LESSONS.md  Makefile  README.md  SPRINT1_TEST_RESULTS.md  SPRINT2_COMPLETION_REPORT.md  SPRINT2_PLAN.md  SPRINT_1_FINAL_REVIEW.md  TEST_SUITE.md
docs/: INFRASTRUCTURE.md  (+17 more)
services/api/: .env.example  README.md  handler.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml
services/api/.aws-sam/: build.toml
services/api/app/: dependencies.py  main.py
services/api/app/core/: aws.py  config.py  security.py
services/api/app/middleware/: __init__.py  rate_limiter.py
services/api/app/repositories/: dynamo_store.py  friend_approval_methods.txt  memory_store.py  storage.py  storage_base.py
services/api/app/schemas/: auth.py  comments.py  completions.py  favorites.py  feed.py  friends.py  prompts.py  settings.py  uploads.py  users.py
services/api/app/services/: auth_service.py  comment_service.py  completion_service.py  favorite_service.py  friend_service.py  prompt_service.py  user_service.py
services/api/docs/: JWT_SECRET_MIGRATION.md
services/api/footprints_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/scripts/: create-jwt-secret.sh  export_openapi.py  reset_dev_data.py  seed_prompts.py
services/api/tests/: conftest.py
services/api/tests/integration/: test_archive_flow.py  test_completion_history_flow.py  test_entry_detail_comments.py  test_favorites.py  test_friend_requests.py  test_friends_flow.py  test_photo_upload_feed_flow.py  test_rate_limiting.py
(+92 files in other folders)
