[project]
name = "footprints-api"
version = "0.1.0"
description = "Footprints FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi==0.140.0",
    "uvicorn[standard]==0.40.0",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.4.0",
    "boto3==1.68.20",
    "mangum==0.29.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "httpx==0.28.1",
    "ruff==0.13.0",
    "mypy==1.17.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
